[gd_scene load_steps=6 format=3 uid="uid://cfta85r0xedfr"]

[ext_resource type="Script" path="res://scenes/TitleScreen/TitleScreen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ctyar86lf6v5a" path="res://scenes/TitleScreen/easy_mode_image.png" id="2_vptae"]
[ext_resource type="Texture2D" uid="uid://bd73e84qplv13" path="res://scenes/TitleScreen/medium_mode_button.png" id="3_qxnoy"]
[ext_resource type="Texture2D" uid="uid://m3hytavenikc" path="res://scenes/TitleScreen/hard_mode_button.png" id="4_3b0cu"]

[sub_resource type="GDScript" id="GDScript_mexoj"]
script/source = "extends TouchScreenButton


# Called when the node enters the scene tree for the first time.
func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


"

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Mishpachat Tazazo Tazuzu"

[node name="EasyModeTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(0, 40)
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("2_vptae")
script = SubResource("GDScript_mexoj")

[node name="MediumModeTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(0, 80)
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("3_qxnoy")

[node name="HardModeTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(0, 120)
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("4_3b0cu")
